--- a/Agustus 2022/css dasar/style specificity.css
+++ b/Agustus 2022/css dasar/style specificity.css
@@ -1,3 +1,26 @@
 #p1 { color: red; }
 
 p { color: green }
+
+
+
+
+
+
+ul#sarapan li {
+    color: green;
+}
+
+.favorit {
+    color: red;
+}
+
+
+ul#sarapan li {
+    color: green;
+}
+
+ul#sarapan li.favorit {
+    color: red;
+}
+
