--- a/Agustus 2022/css bootstrap/style.css
+++ b/Agustus 2022/css bootstrap/style.css
@@ -18,3 +18,18 @@
   padding-top: 2rem;
   background-color: #cf540d;
 }
+
+.navbar-brand {
+  font-family: 'Righteous', cursive;
+}
+
+body {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.link a {
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 10px;
+  color: #fff;
+}
