--- a/Agustus 2022/css bootstrap/style.css
+++ b/Agustus 2022/css bootstrap/style.css
@@ -1,21 +1,16 @@
 .jumbotron {
   background-image: url(image/zz.png);
   padding-top: 7rem;
-  background-color: #b3c7ec;
+  background-color: #cf540d;
 }
 
-#about {
+#home {
   padding-top: 4rem;
   background-color: #cf540d;
 }
 
 #projects {
   padding-top: 4rem;
-  background-color: #cf540d;
-}
-
-#contact {
-  padding-top: 2rem;
   background-color: #cf540d;
 }
 
