--- a/September 2022/crud/crud/Css Bootstrap/assets/css/style.css
+++ b/September 2022/crud/crud/Css Bootstrap/assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 #projects {
-  background-image: url(images/prsdn.jfif);
+  background-image: url("../../images/prsdn.jfif");
   padding-top: 4rem;
   background-color: lightblue;
 }
